--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "ᗩᒍᗩ᙭",
-    "description": "This Bot Will Help You To Store Files In Cloud Storage. You Can Add Files To The Bot By Forward the last file from a public channel to your bot and Press Yes Button.. If The Files Channl Is Private Make the bot admin on the channel and forward the last file to bot. Then Add the bot to you group and send the movie name The Bot Will Give the file in Bot PM..✮✮",
+    "name": "WlMl Finder",
+    "description": "This Bot Will Help You To Explore WlMl,
     "logo": "https://telegra.ph/file/1b837a8df2670b0097aaf.jpg",
     "stack": "container",
     "keywords": [
@@ -16,8 +16,8 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/Aadhi000/Ajax",
-    "repository": "https://github.com/Aadhi000/Ajax",
+    "website": "https://github.com/Inmyveinz/finalattempt",
+    "repository": "https://github.com/Inmyveinz/finalattempt",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
