--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "WlMl Finder",
-    "description": "This Bot Will Help You To Explore WlMl,
+    "description": "This Bot Will Help You To Explore WlMl",
     "logo": "https://telegra.ph/file/1b837a8df2670b0097aaf.jpg",
     "stack": "container",
     "keywords": [
